# compliance_rag_system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  supabase_schema.sql
app/: __init__.py  auth.py  config.py  database.py  engine.py  ingestion.py  main.py  schemas.py  vector_store.py
ui/: index.html
